feat: add footer section

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title
-      | Myapp
+      | Manage Chat Message App
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
@@ -12,3 +12,5 @@ html
     = render 'layouts/header'
     
     = yield
+
+    = render 'layouts/footer'
