add header and footer

--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,3 +1,8 @@
-.footer-section
-    p
-    | footer
+footer
+    .footer-title
+        h1 Youtube app
+    nav.footer-nav
+        .footer-item
+            =link_to("Get Chats", "/chats", class: "footer-link")
+        .footer-item
+            =link_to("folders", "/folders", class: "footer-link")
