add search function

--- a/app/views/chats/index.html.slim
+++ b/app/views/chats/index.html.slim
@@ -1,5 +1,5 @@
 .form-wrapper
-    form method="POST" action="/submit"
+    form method="GET" action="/chats"
         label for="video_id" INPUT LIVE STREAMING VIDEO ID.
         input type="text" name="video_id"
         
