when live streaming is inactive rendor chats top

--- a/app/views/chats/index.html.slim
+++ b/app/views/chats/index.html.slim
@@ -5,5 +5,8 @@
         
         input type="submit" value="Submit"
 .chat-section
-    - for message in @live_chat_messages
-        p #{message.snippet.display_message}
+    - if flash[:nolive]
+        p = flash[:nolive]
+    - if @live_chat_messages
+        - for message in @live_chat_messages
+            p #{message.snippet.display_message}
