add folder cards

--- a/app/views/folders/index.html.slim
+++ b/app/views/folders/index.html.slim
@@ -1,2 +1,36 @@
-p
-| folder page
+.folder-section
+    .card
+     .card-header
+      h3.card-title  streamer name
+     .card-body
+      p.card-text streamer image
+     .card-footer
+      a.btn.btn-primary href="#" Go To this 
+    .card
+     .card-header
+      h3.card-title streamer name
+     .card-body
+      p.card-text This is Card
+     .card-footer
+      a.btn.btn-primary href="#" Card Link
+    .card
+     .card-header
+      h3.card-title streamer name
+     .card-body
+      p.card-text This is Card
+     .card-footer
+      a.btn.btn-primary href="#" Card Link
+    .card
+     .card-header
+      h3.card-title streamer name
+     .card-body
+      p.card-text This is Card
+     .card-footer
+      a.btn.btn-primary href="#" Card Link
+    .card
+     .card-header
+      h3.card-title streamer name
+     .card-body
+      p.card-text This is Card
+     .card-footer
+      a.btn.btn-primary href="#" Card Link
